Fix border radius for changelog on mobile

--- a/landing/landing.css
+++ b/landing/landing.css
@@ -371,4 +371,8 @@ main {
     bottom: 0 !important;
     width: 100% !important;
   }
+
+  #HW_frame {
+    border-radius: 8px 8px 0 0 !important;
+  }
 }
